# job-hunt

./: .env.local.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  compound-engineering.local.md  pyproject.toml
config/: domain-allowlist.yaml  resume-variants.json  runtime.yaml  scoring.yaml  skills-taxonomy.yaml  sources.yaml  watch-profiles.example.yaml  watchlist.example.yaml
data/: answer-bank.seed.json
schemas/: answer-bank.schema.json  application-attempt.schema.json  application-batch-summary.schema.json  application-draft.schema.json  application-plan.schema.json  application-progress.schema.json  application-report.schema.json  application-status.schema.json  ats-check-report.schema.json  candidate-profile.schema.json  claims-bank.schema.json  company-research.schema.json  discovery-cursor.schema.json  discovery-review.schema.json  discovery-run.schema.json  generated-content.schema.json  lead.schema.json  recent-scan.schema.json  resume-selection.schema.json  resume-variant-registry.schema.json  run-summary.schema.json  watchlist.schema.json
scripts/: job_hunt.py
tests/: test_analytics.py  test_answer_bank.py  test_application.py  test_ats_check.py  test_calibration.py  test_copilot.py  test_cover_letter_lanes.py  test_discover_jobs.py  test_discovery.py  test_discovery_registry.py  test_executors.py  test_foundation.py  test_generation.py  test_glassdoor_intake.py  test_glassdoor_pipeline.py  test_humanize.py  test_indeed_discovery.py  test_indeed_pipeline.py  test_ingestion.py  test_integrity_and_compat.py  test_linkedin_intake.py  (+25 more)
(+262 files in other folders)
